[gd_scene load_steps=9 format=3 uid="uid://c34jh3v61xojh"]

[ext_resource type="Script" path="res://Zookeeper/zookeeper.gd" id="1_nf5op"]
[ext_resource type="Script" path="res://StateMachines/Zookeeper/Zookeeper_State_Machine.gd" id="2_sgkx4"]
[ext_resource type="Script" path="res://StateMachines/Zookeeper/States/Zookeeper_Idle.gd" id="3_5yo00"]
[ext_resource type="Script" path="res://StateMachines/Zookeeper/States/Zookeeper_Follow_Player.gd" id="4_13t8d"]
[ext_resource type="Script" path="res://StateMachines/Zookeeper/States/Zookeeper_Attack.gd" id="5_qsxm6"]
[ext_resource type="PackedScene" uid="uid://doos1hqfu3wdh" path="res://Zookeeper/Zookeeper_Model.tscn" id="6_0t135"]
[ext_resource type="Script" path="res://StateMachines/Zookeeper/States/Zookeeper_Death.gd" id="6_f5tih"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xat7b"]

[node name="Zookeeper" type="CharacterBody3D" groups=["enemy"]]
axis_lock_linear_y = true
script = ExtResource("1_nf5op")

[node name="World_Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_xat7b")

[node name="ZookeeperStateMachine" type="Node" parent="."]
script = ExtResource("2_sgkx4")
initial_state = NodePath("Follow_Player")

[node name="Idle" type="Node" parent="ZookeeperStateMachine"]
script = ExtResource("3_5yo00")

[node name="Follow_Player" type="Node" parent="ZookeeperStateMachine" node_paths=PackedStringArray("zookeeper")]
script = ExtResource("4_13t8d")
zookeeper = NodePath("../..")

[node name="Attack" type="Node" parent="ZookeeperStateMachine"]
script = ExtResource("5_qsxm6")

[node name="Death" type="Node" parent="ZookeeperStateMachine" node_paths=PackedStringArray("bone")]
script = ExtResource("6_f5tih")
bone = NodePath("../../Zookeeper_Model/Armature_001/Skeleton3D/Physical Bone mixamorig_Spine2")

[node name="Navigation_Agent" type="NavigationAgent3D" parent="."]
target_desired_distance = 1.5
avoidance_enabled = true

[node name="Zookeeper_Model" parent="." instance=ExtResource("6_0t135")]

[node name="Physical Bone mixamorig_Hips" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="1"]
transform = Transform3D(1, 6.47149e-09, 4.69318e-07, 4.87175e-10, 0.999917, -0.0129172, -5.34549e-07, 0.0129171, 0.999917, -4.86085e-05, 1.62002, -109.361)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.26135e-05, 5.7708e-07, 5.09126)
body_offset = Transform3D(1, 1.46909e-16, -3.16646e-08, 3.35287e-08, 8.84756e-08, -1, 5.37977e-11, 1, 3.72529e-09, -5.24522e-05, 5.09126, -5.96046e-07)

[node name="Physical Bone mixamorig_Spine2" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="2"]
transform = Transform3D(1, -5.06702e-08, -9.8195e-08, 8.8719e-08, 0.992603, 0.121493, -6.01788e-08, -0.121492, 0.992592, 2.83443e-06, -2.18008, -141.937)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.33762e-07, 1.92505e-05, 8.43271)
body_offset = Transform3D(1, -1.49012e-08, -2.60772e-08, 1.21072e-07, -2.17557e-06, -1, 5.96046e-08, 1.00001, -1.3411e-07, 9.53664e-07, 8.43271, -1.81198e-05)

[node name="Physical Bone mixamorig_Shoulder_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="3"]
transform = Transform3D(-0.205695, 0.0494838, 0.977364, 0.978562, 5.9061e-06, 0.205948, 0.0101923, 0.998775, -0.0484228, -9.86638, -4.43247, -144.319)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.19066e-07, 1.49876e-05, 5.41908)
body_offset = Transform3D(0.999999, 6.94042e-06, -1.49012e-08, -8.9407e-08, -1.37998e-06, -1, 3.61058e-09, 1, 5.00524e-08, -2.38419e-07, 5.41908, -1.52588e-05)

[node name="Physical Bone mixamorig_Arm_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="4"]
transform = Transform3D(9.82018e-08, -1, 6.25365e-07, 1, -1.20931e-07, -1.0547e-06, 1.09399e-06, 6.29302e-07, 1, -29.1629, -5.54854, -144.056)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.33786e-06, -14, -3.05214e-05)
body_offset = Transform3D(1, -1.42109e-14, -1.33014e-11, -4.9738e-14, 1, 4.83804e-10, 1.13687e-13, -2.71636e-10, 1, -3.33786e-06, 14, 3.05176e-05)

[node name="Physical Bone mixamorig_ForeArm_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="5"]
transform = Transform3D(1.60443e-08, -1, 6.22123e-07, 1, -2.02992e-07, -1.2229e-06, 1.26135e-06, 6.25423e-07, 1, -43.0043, -5.54853, -144.056)
body_offset = Transform3D(1, 9.6108e-11, 5.68434e-13, 4.54747e-13, 1, 3.2144e-13, -8.51287e-10, -4.25558e-10, 1, 0, 0, 0)

[node name="Physical Bone mixamorig_Hand_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="6"]
transform = Transform3D(5.29383e-07, -0.783673, 0.621171, -0.506168, -0.53572, -0.675868, 0.862436, -0.314416, -0.396671, -72.5656, -4.2076, -143.269)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.11732e-05, 1.90735e-05, 1.98402)
body_offset = Transform3D(-0.506167, -0.53572, -0.675869, -1.5099e-14, 0.783673, -0.621171, 0.862436, -0.314416, -0.39667, 1.34093, 1.2324, 0.787033)

[node name="Physical Bone mixamorig_Shoulder_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="7"]
transform = Transform3D(-0.205705, -0.0494627, -0.97736, -0.978559, 9.17195e-05, 0.205958, -0.0101877, 0.99877, -0.0484049, 9.86662, -4.43245, -144.319)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.51894e-06, 3.80329e-07, 5.41886)
body_offset = Transform3D(0.999999, -9.01121e-05, -1.04308e-07, 5.96046e-08, -1.64612e-05, -0.999998, 2.73427e-09, 0.999994, -7.01859e-08, -9.53674e-07, 5.41884, 0)

[node name="Physical Bone mixamorig_Arm_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="8"]
transform = Transform3D(2.62209e-06, -1.03563e-06, -0.999999, -0.999569, 3.24848e-07, -2.5096e-06, 2.30413e-07, 0.999999, -8.79169e-07, 29.0836, -5.54847, -143.991)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.29586e-07, -0.0653043, 13.9208)
body_offset = Transform3D(0.999569, -5.96043e-08, -3.11256e-08, 1.81217e-10, -3.57628e-07, -1, -3.97904e-13, 1, -2.38419e-07, 0, 13.9208, 0.0653076)

[node name="Physical Bone mixamorig_ForeArm_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="9"]
transform = Transform3D(2.47482e-06, -2.01077e-06, -0.999999, -1, 2.63703e-07, -2.29286e-06, -2.77665e-07, 1, -2.12253e-06, 57.1688, -5.54843, -144.056)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.60417e-05, -7.03841e-05, 14.1645)
body_offset = Transform3D(1, -2.84217e-14, -2.48663e-07, -1.49012e-07, -2.68221e-07, -1, -5.06639e-07, 1, -4.17231e-07, 2.95639e-05, 14.1645, 7.62939e-05)

[node name="Physical Bone mixamorig_Hand_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="10"]
transform = Transform3D(3.25485e-07, 0.78361, -0.621253, 0.506704, -0.535592, -0.675218, -0.861715, -0.314576, -0.396712, 72.5662, -4.20751, -143.268)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000276208, 0.000608325, 1.98555)
body_offset = Transform3D(-0.506705, 0.535595, 0.675217, -5.90242e-08, 0.783608, -0.621256, -0.861715, -0.314577, -0.396711, -1.34086, 1.23306, 0.788116)

[node name="Physical Bone mixamorig_UpLeg_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="11"]
transform = Transform3D(-1, -1.23765e-07, -1.35951e-06, -8.13663e-08, 0.999959, -0.00913975, 1.37894e-06, -0.00913975, -0.999959, -8.20775, 0.157465, -75.3334)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.95939e-07, 2.46683e-06, 22.1858)
body_offset = Transform3D(1, -1.49214e-13, -2.23539e-08, -3.72488e-09, 9.31323e-10, -1, 2.97995e-08, 1, -3.72529e-09, 0, 22.1858, -2.38419e-06)

[node name="Physical Bone mixamorig_Leg_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="12"]
transform = Transform3D(-1, -2.50622e-05, -1.53692e-06, -4.07277e-08, 0.997189, 0.0696876, 1.46314e-06, 0.0694956, -0.997568, -8.20769, -1.19128, -30.9389)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.65412e-06, 1.81472e-06, 22.2639)
body_offset = Transform3D(1, 2.51159e-05, 1.1921e-07, 4.47041e-08, -0.000165194, -0.999999, 7.39255e-09, 0.999608, 1.49012e-08, 0, 22.2639, -2.14577e-06)

[node name="Physical Bone mixamorig_Foot_R" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="13"]
transform = Transform3D(-1, -1.03679e-06, -9.98542e-07, -2.09896e-07, 0.631742, -0.775179, 1.16805e-06, -0.775178, -0.631741, -8.20765, 2.61247, -4.36481)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.08832e-06, 3.00185e-06, 6.90844)
body_offset = Transform3D(1, -1.42109e-14, 4.47035e-07, 2.3691e-08, 1.2517e-06, -1, -1.25378e-09, 1, -8.9407e-08, 0, 6.90844, -2.38419e-06)

[node name="Physical Bone mixamorig_UpLeg_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="14"]
transform = Transform3D(-1, -2.45161e-07, -1.35691e-06, -2.21561e-07, 0.999857, -0.00911866, 1.3666e-06, -0.00911807, -0.999957, 8.20783, 0.157082, -75.3335)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.39807e-07, -7.79584e-05, 22.1857)
body_offset = Transform3D(1, 1.04675e-08, -2.43312e-08, -1.6719e-08, 1.56462e-07, -0.999999, 7.04162e-10, 0.999898, 4.74975e-07, 0, 22.1857, 6.74129e-05)

[node name="Physical Bone mixamorig_Leg_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="15"]
transform = Transform3D(-0.999999, -1.89018e-05, -1.48474e-06, 4.08942e-07, 0.997051, 0.0696653, 9.71721e-07, 0.0697219, -0.997569, 8.20789, -1.19172, -30.9387)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.40029e-06, 1.40927e-06, 22.2642)
body_offset = Transform3D(0.999999, 1.9072e-05, 6.70541e-08, -4.76812e-07, 9.28044e-05, -0.999998, 3.05475e-07, 0.999486, 3.65078e-07, 1.90735e-06, 22.2642, -9.53674e-06)

[node name="Physical Bone mixamorig_Foot_L" parent="Zookeeper_Model/Armature_001/Skeleton3D" index="16"]
transform = Transform3D(-1, 3.80682e-06, -5.7961e-07, -1.8643e-07, 0.631739, -0.775161, 8.19383e-07, -0.775166, -0.631739, 8.20793, 2.6125, -4.36474)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.42119e-07, -3.49663e-05, 6.90849)
body_offset = Transform3D(1, -4.69758e-06, -7.84951e-08, -2.84985e-07, 6.4671e-06, -0.999985, 1.37834e-07, 0.999988, 9.68575e-06, 0, 6.90839, -3.19481e-05)

[connection signal="target_reached" from="Navigation_Agent" to="." method="_on_navigation_agent_target_reached"]

[editable path="Zookeeper_Model"]
